<resources>
    <string name="app_name">Tute_03</string>
    <string name="tv_num1">Number 01</string>
    <string name="tv_num2">Number 02</string>
    <string name="et_n1" />
    <string name="et_n2" />
    <string name="btn_ok">OK</string>
    <string name="tv_answer" />
    <string name="btn_add">+</string>
    <string name="btn_subtract">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divide">/</string>
    <string name="et_toast">Openning Calculator</string>
</resources>